tests/errors/assignment_01.f90
module assignment_01

contains

subroutine f(a, b)
integer, intent(inout) :: a, b

b =

end subroutine

end module
